--- a/src/app/gameroom/gameroom.module.css
+++ b/src/app/gameroom/gameroom.module.css
@@ -153,7 +153,7 @@
   width: 20vw;
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: 0.25rem;
   overflow-x: auto;
   overflow-y: hidden;
   flex: 2;
